<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactInfo">

    <include
        android:id="@+id/actionBarContact"
        layout="@layout/action_bar" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/actionBarContact">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constrainFrom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_top_constrain"
            android:paddingTop="?attr/actionBarSize"
            android:paddingBottom="@dimen/padding_constrainFromBottom">

            <TextView
                android:id="@+id/tViewTitleForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_form"
                android:textStyle="bold"
                android:theme="@style/title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/constrainFrom" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tInputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_left_constrain"
                android:layout_marginTop="@dimen/margin_top_constrain"
                android:layout_marginRight="@dimen/margin_right_constrain"
                app:layout_constraintTop_toBottomOf="@id/tViewTitleForm">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tEditName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tInputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_left_constrain"
                android:layout_marginTop="@dimen/margin_top_constrain"
                android:layout_marginRight="@dimen/margin_right_constrain"
                app:layout_constraintTop_toBottomOf="@id/tInputName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tEditEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_email" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tInputMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_left_constrain"
                android:layout_marginTop="@dimen/margin_top_constrain"
                android:layout_marginRight="@dimen/margin_right_constrain"
                app:layout_constraintTop_toBottomOf="@id/tInputEmail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tEditMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_message" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_button_send"
        android:theme="@style/button"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>